spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ img {
 }
 
 td {
-  padding: 10px 20px;
+  padding: 10px 30px;
 }
 
 svg * {
